--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  background: #8f4747;
+}
 ._container {
   max-width: $maxWidthContainer;
   margin: 0 auto;
