--- a/src/style/hero.scss
+++ b/src/style/hero.scss
@@ -1,4 +1,4 @@
-@import "../utilits/mediaQueryConstants.scss";
+@import "./mediaQueryConstants.scss";
 .hero {
   width: 100%;
   height: calc(100vh - 60px);
