--- a/src/style/registeredUsers.scss
+++ b/src/style/registeredUsers.scss
@@ -1,10 +1,10 @@
-@import "../utilits/mediaQueryConstants.scss";
+@import "./mediaQueryConstants.scss";
 .registeredUsers {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 140px;
+  margin: 140px 0;
   width: 100%;
   @media (max-width: $md1) {
     padding: 0 50px;
