--- a/src/style/form.scss
+++ b/src/style/form.scss
@@ -1,12 +1,31 @@
 @import "../style/mediaQueryConstants.scss";
 .form {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  @media (max-width: $md4) {
-    width: 90%;
+  width: 100%;
+  &__unregistered {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 auto;
+    @media (max-width: $md4) {
+      width: 90%;
+    }
+  }
+  &__registered {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    h1 {
+      text-align: center;
+      color: rgba(0, 0, 0, 0.87);
+      font-size: 40px;
+      line-height: 40px;
+      margin-bottom: 50px;
+      padding: 0px 20px;
+    }
   }
   &__inputs {
     width: 100%;
