--- a/src/style/registeredUsers.scss
+++ b/src/style/registeredUsers.scss
@@ -19,6 +19,7 @@
     color: rgba(0, 0, 0, 0.87);
   }
   &__users {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -36,6 +37,34 @@
     }
     @media (max-width: $md4) {
       width: 100%;
+    }
+  }
+  &__btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    button {
+      margin: 0px 10px;
+    }
+  }
+  &__paginations {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  &__pagination {
+    margin: 0px 5px;
+    padding: 5px;
+    cursor: pointer;
+    &.current {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 30px;
+      width: 30px;
+      background: #f4e041;
+      border-radius: 50%;
     }
   }
 }
