--- a/src/style/form.scss
+++ b/src/style/form.scss
@@ -1,6 +1,11 @@
 @import "../style/mediaQueryConstants.scss";
 .form {
   width: 100%;
+  &__title {
+    text-align: center;
+    font-size: 40px;
+    padding: 0px 16px;
+  }
   &__unregistered {
     width: 50%;
     display: flex;
