--- a/src/style/form.scss
+++ b/src/style/form.scss
@@ -13,6 +13,9 @@
     align-items: center;
     flex-direction: column;
     margin: 0 auto;
+    @media (max-width: $md3) {
+      width: 70%;
+    }
     @media (max-width: $md4) {
       width: 90%;
     }
