--- a/src/style/registeredUsers.scss
+++ b/src/style/registeredUsers.scss
@@ -52,6 +52,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 30px;
+    flex-wrap: wrap;
   }
   &__pagination {
     margin: 0px 3px;
