--- a/src/style/hero.scss
+++ b/src/style/hero.scss
@@ -7,9 +7,8 @@
   align-items: center;
   flex-direction: column;
   margin: 0 auto;
-  background: red;
-  // background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-  //   url(../../public/img/field.jpeg);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../../public/img/field.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
